Fix PR c++/42251

gcc/cp/ChangeLog:
	PR c++/42251
	* pt.c (convert_template_argument): Avoid missing folding of SCOPE_REFs.

gcc/testsuite/ChangeLog:
	PR c++/42251
	* g++.dg/template/const3.C: New test.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@155159 138bc75d-0d04-0410-961f-82ee72b054a4